--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.5",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-clipboard": "~1.1.0",
     "expo-font": "~9.2.1",
     "expo-linear-gradient": "~9.2.0",
     "expo-splash-screen": "~0.11.2",
@@ -57,8 +58,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^2.4.1",
     "jest-expo": "^42.0.1",
+    "prettier": "^2.4.1",
     "typescript": "~4.0.0"
   },
   "private": true
